# cppAlsaVolume

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  PKGBUILD.in  README  README.md  alsavolume.desktop  alsavolume.desktop.in  alsavolume.pro  alsawork.cc  alsawork.cpp  alsawork.h  conf.pri  config.h.in  copyright.in  filework.cpp  filework.h  main.cpp  mixerswitches.cpp  mixerswitches.h  settings.cpp  settings.h  settingsframe.cpp  settingsframe.h  settingsstr.cpp  settingsstr.h  sliderwindow.cpp  sliderwindow.h  statusnotifier-gen.cmake  switchcap.cpp  switchcap.h  tools.cpp  tools.h  trayicon.cpp  trayicon.h  use_cpack.cmake  version.cmake  (+3 more)
alsawork/: alsadevice.cpp  alsadevice.h  alsawork.cpp  alsawork.h  mixerswitches.cpp  mixerswitches.h  volumemixers.cpp  volumemixers.h
cmake/modules/: FindIntl.cmake  use_cpack.cmake  version.cmake
gladefiles/: SettingsFrame.glade  SettingsFrame_2.glade  SliderFrame.glade  SliderFrame_2.glade
gui/: settingsframe.cpp  settingsframe.h  sliderwindow.cpp  sliderwindow.h  trayicon.cpp  trayicon.h
po/: LINGUAS  POTFILES.in  ru.po  uk.po
pulsework/: pulsecore.cpp  pulsecore.h  pulsedevice.cpp  pulsedevice.h
tools/: core.cpp  core.h  iconpacks.cpp  iconpacks.h  settings.cpp  settings.h  settingsstr.cpp  settingsstr.h  tools.cpp  tools.h
